--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,3 +60,7 @@ html::-webkit-scrollbar{
 .swal2-progress-bar {
   background-color: var(--color-green) !important;  /* Asegúrate de usar la variable que deseas */
 }
+
+.input-style {
+  @apply border rounded-lg px-3 py-2 shadow-sm focus:ring-2 focus:ring-[#8B5A2B] focus:outline-none;
+}
