--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,11 @@
 	width: 0px;
 }
 
+.input {
+	@apply w-full border px-3 py-2 rounded-lg bg-white outline-none focus:ring-2;
+}
+
+
 meter {
 	width: 100%;
 	height: 20px; /* 👈 Cambias la altura */
